# template_graphics

./: .gitignore  Cargo.toml  out.txt  out_bte.txt
src/: conv.rs  draw.rs  geom.rs  lib.rs  main.rs  num.rs  rel.rs  test.rs
src/draw/: rast.rs  vect.rs
src/draw/rast/: mod.rs
src/file/: stl.rs
src/file/stl/: mod.rs
src/geom/: d2.rs  d3.rs  mesh.rs
src/geom/d2/: mesh.rs  poly.rs  prim.rs  shape.rs  span.rs
src/geom/d2/mesh/: ind.rs  rind.rs
src/geom/d2/prim/: line.rs  rect.rs  refactor.rs  seg.rs  tri.rs  vect.rs
src/geom/d2/prim/refactor/: line.rs  rect.rs  seg.rs  tri.rs  vect.rs
src/geom/d2/shape/: d2.rs
src/geom/d3/: mesh.rs  prim.rs
src/geom/d3/mesh/: ind.rs  rind.rs
src/geom/d3/prim/: vect.rs
src/geom/mesh/: ind.rs
src/geom/prim/: d2.rs  d3.rs
src/geom/prim/d2/: mod.rs
src/geom/prim/d3/: mod.rs
src/num/: mod.rs
src/prim/: mod.rs
src/prim/d2/: mod.rs
src/prim/d3/: mod.rs
src/rel/: mod.rs
src/util/: mod.rs
src/util/arith/: mod.rs
src/util/iter/: mod.rs
src/util/num/: mod.rs
