[package]
name = "tg"
version = "0.1.0"
authors = ["kliqkqr <paul.prietzel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
image = "0.24.5"
rand = "*"
itertools = "0.10.5"
svg = "0.13.0"
libc = "0.2.139"

[lib]
name = "tg"
crate-type = ["cdylib"]